Make Engine fully Java-8-compliant (#432)
* feat(java 8): Engine is now fully Java-8-compliant.

Maven source & target version is java 1.8
Removed any reference to MaxPermSize in any configuration
Adapted PlatformAPIImpl.java to use lambda as an example.

closes [BS-16066](https://bonitasoft.atlassian.net/browse/BS-16066)