@@ -26,7 +26,7 @@
         <tomcat.zip.folder>${java.io.tmpdir}</tomcat.zip.folder>
         <if.task>net.sf.antcontrib.logic.IfTask</if.task>
         <db.vendor>h2</db.vendor>
-        <cargo.jvmargs>-Xms128m -Xmx512m -XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError</cargo.jvmargs>
+        <cargo.jvmargs>-Xms128m -Xmx512m -XX:+HeapDumpOnOutOfMemoryError</cargo.jvmargs>
         <!-- -Xdebug -->
         <!-- -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000 -Xnoagent -Djava.compiler=NONE -->
     </properties>
